--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.calender{
+  width: 90%;
+  max-width: 100%;
+  background: black;
+  border: 1px solid lightblue;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.500em;
+}
