新規登録・ログインフォームの実装

--- a/src/App.css
+++ b/src/App.css
@@ -37,11 +37,11 @@
   }
 }
 
-.calender{
+/* .calender{
   width: 90%;
   max-width: 100%;
   background: black;
   border: 1px solid lightblue;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.500em;
-}
+} */
