--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -57,23 +57,22 @@
     transform: translate(-50%,-50%);
     margin:0;
     padding:10;
-    width:300px;
-    height: 330px;
+    width:20vw;
     border: double 2px lightblue;
     border-radius: 10px
 }
 
 .userhome-button{
     position: absolute;
-    top: 80%;
+    top: 75%;
     left: 37.5%;
     -ms-transform: translate(-50%,-50%);
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
     margin:0;
     padding:10;
-    height:50px;
-    width:300px;
+    width:20vw;
+    height: 50px;
     background-color: white;
     color: black;
     border: double 2px lightblue;
@@ -90,23 +89,22 @@
     transform: translate(-50%,-50%);
     margin:0;
     padding:10;
-    width:300px;
-    height: 330px;
+    width:20vw;
     border: double 2px lightgreen;
     border-radius: 10px
 }
 
 .ownerhome-button{
     position: absolute;
-    top: 80%;
+    top: 75%;
     left: 62.5%;
     -ms-transform: translate(-50%,-50%);
     -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
     margin:0;
     padding:10;
-    height:50px;
-    width:300px;
+    width:20vw;
+    height: 50px;
     background-color: white;
     color: black;
     border: double 2px lightgreen;
@@ -168,7 +166,7 @@
     display: block;
     border:rgba(0, 0, 0, 0.3) solid 10px;
     text-align: center;
-    width: 1000px;
+    width: 100vw;
     margin:40px auto;
     padding: 50px
 
@@ -230,7 +228,7 @@
     transition: .4s;
     text-align: center;
     margin: auto;
-    width : 15%
+    width : 20vw
 }
 .btn-flat-double-border:hover {
 background: #fffbef;
@@ -246,7 +244,7 @@ background: #fffbef;
 	box-sizing: border-box;
 	width: 100%;
 	padding: 0.3em;
-	padding-left: 40px;
+	padding-left: 5px;
 	letter-spacing: 1px;
     border: 0;
 }
